loader z-index issues fixed

--- a/client-dev/less/component.spinner.less
+++ b/client-dev/less/component.spinner.less
@@ -8,6 +8,7 @@
   position: absolute;
   top: 50%;
   margin-top: -10px;
+  z-index: 1;
 }
 
 .spinner > * {
